5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1573_1331.log
== TEST (2019-03-11 15:26:08) 
-- CODE:
print (50//3%)
-- ERROR:
File "XXXX", line 1
    print (50//3%)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:09) 
-- CODE:
print (50//3%)
-- EXECUTION TIME:
0.125663
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print (50//3%)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:48) 
-- CODE:
print 50//3
-- ERROR:
File "XXXX", line 1
    print 50//3
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(50//3)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:49) 
-- CODE:
print 50//3
-- EXECUTION TIME:
0.160611
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print 50//3
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:50) 
-- CODE:
print 50//3
-- EXECUTION TIME:
0.120666
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print 50//3
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:50) 
-- CODE:
print 50//3
-- EXECUTION TIME:
0.155033
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print 50//3
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:50) 
-- CODE:
print 50//3
-- ERROR:
File "XXXX", line 1
    print 50//3
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(50//3)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:00) 
-- CODE:
print (50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:16) 
-- CODE:
print (50//3)50%3
-- ERROR:
File "XXXX", line 1
    print (50//3)50%3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:21) 
-- CODE:
print (50//3) 50%3
-- ERROR:
File "XXXX", line 1
    print (50//3) 50%3
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:22) 
-- CODE:
print (50//3) 50%3
-- EXECUTION TIME:
0.119453
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 1
    print (50//3) 50%3
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:28:04) 
-- CODE:
print (50//3, 50 % 3)
-- OUTPUT:
16 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:28:06) 
-- CODE:
print (50//3, 50 % 3)
-- EXECUTION TIME:
0.156213
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
